--- a/package.json
+++ b/package.json
@@ -29,18 +29,20 @@
   },
   "homepage": "https://github.com/zoro-protocol/hardhat-zksync-web3",
   "devDependencies": {
-    "@matterlabs/hardhat-zksync-toolbox": "^0.2.0",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
-    "dotenv": "^16.3.1",
     "enquirer": "^2.4.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.10.0",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.17.1",
     "prettier": "3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "peerDependencies": {
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.5",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.17.1",
+    "zksync-web3": "^0.14.3"
   }
 }
